docs/0.1/integrations/introduction.mdx
---
sidebarTitle: 'Introduction'
title: 'Monitor your LLM usage'
description: 'Monitor LLM Costs, Tokens and Performance along with User Interactions'
---

Start integrating and monitoring your applications with Doku effortlessly. Choose from a range of providers to **start tracking LLM performance, usage, and costs** without hassle.

<CardGroup cols={2}>
  <Card
      title="OpenAI"
      href="/0.1/integrations/openai/introduction"
      icon={
        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <title>OpenAI</title>
          <path d="M22.2819 9.8211a5.9847 5.9847 0 0 0-.5157-4.9108 6.0462 6.0462 0 0 0-6.5098-2.9A6.0651 6.0651 0 0 0 4.9807 4.1818a5.9847 5.9847 0 0 0-3.9977 2.9 6.0462 6.0462 0 0 0 .7427 7.0966 5.98 5.98 0 0 0 .511 4.9107 6.051 6.051 0 0 0 6.5146 2.9001A5.9847 5.9847 0 0 0 13.2599 24a6.0557 6.0557 0 0 0 5.7718-4.2058 5.9894 5.9894 0 0 0 3.9977-2.9001 6.0557 6.0557 0 0 0-.7475-7.0729zm-9.022 12.6081a4.4755 4.4755 0 0 1-2.8764-1.0408l.1419-.0804 4.7783-2.7582a.7948.7948 0 0 0 .3927-.6813v-6.7369l2.02 1.1686a.071.071 0 0 1 .038.052v5.5826a4.504 4.504 0 0 1-4.4945 4.4944zm-9.6607-4.1254a4.4708 4.4708 0 0 1-.5346-3.0137l.142.0852 4.783 2.7582a.7712.7712 0 0 0 .7806 0l5.8428-3.3685v2.3324a.0804.0804 0 0 1-.0332.0615L9.74 19.9502a4.4992 4.4992 0 0 1-6.1408-1.6464zM2.3408 7.8956a4.485 4.485 0 0 1 2.3655-1.9728V11.6a.7664.7664 0 0 0 .3879.6765l5.8144 3.3543-2.0201 1.1685a.0757.0757 0 0 1-.071 0l-4.8303-2.7865A4.504 4.504 0 0 1 2.3408 7.872zm16.5963 3.8558L13.1038 8.364 15.1192 7.2a.0757.0757 0 0 1 .071 0l4.8303 2.7913a4.4944 4.4944 0 0 1-.6765 8.1042v-5.6772a.79.79 0 0 0-.407-.667zm2.0107-3.0231l-.142-.0852-4.7735-2.7818a.7759.7759 0 0 0-.7854 0L9.409 9.2297V6.8974a.0662.0662 0 0 1 .0284-.0615l4.8303-2.7866a4.4992 4.4992 0 0 1 6.6802 4.66zM8.3065 12.863l-2.02-1.1638a.0804.0804 0 0 1-.038-.0567V6.0742a4.4992 4.4992 0 0 1 7.3757-3.4537l-.142.0805L8.704 5.459a.7948.7948 0 0 0-.3927.6813zm1.0976-2.3654l2.602-1.4998 2.6069 1.4998v2.9994l-2.5974 1.4997-2.6067-1.4997Z" />
        </svg>
      }
      iconType="duotone"
    >
  </Card>
  <Card
      title="Cohere"
      href="/0.1/integrations/cohere/introduction"
      icon={
        <svg role="image" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80">
        <g>
          <g>
          <g>
            <path d="M24.3,44.7c2,0,6-0.1,11.6-2.4c6.5-2.7,19.3-7.5,28.6-12.5c6.5-3.5,9.3-8.1,9.3-14.3C73.8,7,66.9,0,58.3,0
                h-36C10,0,0,10,0,22.3S9.4,44.7,24.3,44.7z">
            </path>
            <path d="M30.4,60c0-6,3.6-11.5,9.2-13.8l11.3-4.7C62.4,36.8,75,45.2,75,57.6C75,67.2,67.2,75,57.6,75l-12.3,0
                C37.1,75,30.4,68.3,30.4,60z">
            </path>
            <path d="M12.9,47.6L12.9,47.6C5.8,47.6,0,53.4,0,60.5v1.7C0,69.2,5.8,75,12.9,75h0c7.1,0,12.9-5.8,12.9-12.9v-1.7
                C25.7,53.4,20,47.6,12.9,47.6z">
            </path>
          </g>
          </g>
        </g>
        </svg>
      }
      iconType="duotone"
    >
  </Card>
  <Card
      title="Anthropic"
      href="/0.1/integrations/anthropic/introduction"
      icon={
        <svg viewBox="0 0 255 255" xmlns="http://www.w3.org/2000/svg">
          <path d="M147.486878,0 C147.486878,0 217.568251,175.780074 217.568251,175.780074 C217.568251,175.780074 256,175.780074 256,175.780074 C256,175.780074 185.918621,0 185.918621,0 C185.918621,0 147.486878,0 147.486878,0 C147.486878,0 147.486878,0 147.486878,0 Z"></path>
          <path d="M66.1828124,106.221191 C66.1828124,106.221191 90.1624677,44.4471185 90.1624677,44.4471185 C90.1624677,44.4471185 114.142128,106.221191 114.142128,106.221191 C114.142128,106.221191 66.1828124,106.221191 66.1828124,106.221191 C66.1828124,106.221191 66.1828124,106.221191 66.1828124,106.221191 Z M70.0705318,0 C70.0705318,0 0,175.780074 0,175.780074 C0,175.780074 39.179211,175.780074 39.179211,175.780074 C39.179211,175.780074 53.5097704,138.86606 53.5097704,138.86606 C53.5097704,138.86606 126.817544,138.86606 126.817544,138.86606 C126.817544,138.86606 141.145724,175.780074 141.145724,175.780074 C141.145724,175.780074 180.324935,175.780074 180.324935,175.780074 C180.324935,175.780074 110.254409,0 110.254409,0 C110.254409,0 70.0705318,0 70.0705318,0 C70.0705318,0 70.0705318,0 70.0705318,0 Z"></path>
        </svg>
      }
      iconType="duotone"
    >
  </Card>
  <Card
      title="Azure OpenAI"
      href="/0.1/integrations/azure-openai/introduction"
      icon={
        <svg viewBox="0 0 525 525" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2"><g fill-rule="nonzero">
          <path d="M52.091 10.225h40.684L50.541 135.361a6.5 6.5 0 01-6.146 4.412H12.732c-3.553 0-6.477-2.923-6.477-6.476 0-.704.115-1.403.34-2.07L45.944 14.638a6.501 6.501 0 016.147-4.415v.002z" transform="translate(2.076 1.626) scale(3.37462)"/><path d="M377.371 319.374H159.644c-5.527 0-10.076 4.549-10.076 10.077 0 2.794 1.164 5.466 3.206 7.37l139.901 130.577a21.986 21.986 0 0015.004 5.91H430.96l-53.589-153.934z"/><path d="M52.091 10.225a6.447 6.447 0 00-6.161 4.498L6.644 131.12a6.457 6.457 0 00-.38 2.185c0 3.548 2.92 6.468 6.469 6.468H45.23a6.95 6.95 0 005.328-4.531l7.834-23.089 27.985 26.102a6.622 6.622 0 004.165 1.518h36.395l-15.962-45.615-46.533.011 28.48-83.944H52.091z" transform="translate(2.076 1.626) scale(3.37462)"/><path d="M104.055 14.631a6.492 6.492 0 00-6.138-4.406H52.575a6.493 6.493 0 016.138 4.406l39.35 116.594c.225.668.34 1.367.34 2.072 0 3.554-2.924 6.478-6.478 6.478h45.344c3.553-.001 6.476-2.925 6.476-6.478 0-.705-.115-1.404-.34-2.072l-39.35-116.594z" transform="translate(2.076 1.626) scale(3.37462)"/></g><defs><linearGradient id="prefix___Linear1" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="rotate(108.701 26.35 33.911) scale(131.7791)"><stop offset="0" stop-color="#114a8b"/><stop offset="1" stop-color="#0669bc"/></linearGradient><linearGradient id="prefix___Linear2" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="rotate(161.318 33.644 45.587) scale(10.31703)"><stop offset="0" stop-opacity=".3"/><stop offset=".07" stop-opacity=".2"/><stop offset=".32" stop-opacity=".1"/><stop offset=".62" stop-opacity=".05"/><stop offset="1" stop-opacity="0"/></linearGradient><linearGradient id="prefix___Linear3" x1="0" y1="0" x2="1" y2="0" gradientUnits="userSpaceOnUse" gradientTransform="rotate(69.426 25.69 62.036) scale(131.9816)"><stop offset="0" stop-color="#3ccbf4"/><stop offset="1" stop-color="#2892df"/></linearGradient></defs>
        </svg>
      }
      iconType="duotone"
    >
  </Card>
  <Card
      title="Mistral"
      href="/0.1/integrations/mistral/introduction"
      icon={
        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 355 355" fill-rule="evenodd">
          <path d="M0 0 C27.39 0 54.78 0 83 0 C83 17.82 83 35.64 83 54 C100.82 54 118.64 54 137 54 C137 71.82 137 89.64 137 108 C145.58 108 154.16 108 163 108 C163 90.18 163 72.36 163 54 C180.82 54 198.64 54 217 54 C217 36.18 217 18.36 217 0 C244.39 0 271.78 0 300 0 C300 90.09 300 180.18 300 273 C272.61 273 245.22 273 217 273 C217 237.36 217 201.72 217 165 C208.75 165 200.5 165 192 165 C192 182.82 192 200.64 192 219 C164.28 219 136.56 219 108 219 C108 201.18 108 183.36 108 165 C99.75 165 91.5 165 83 165 C83 200.64 83 236.28 83 273 C55.61 273 28.22 273 0 273 C0 182.91 0 92.82 0 0 Z "/>
          <path d="M0 0 C27.39 0 54.78 0 83 0 C83 35.97 83 71.94 83 109 C37.79 109 -7.42 109 -54 109 C-54 90.85 -54 72.7 -54 54 C-36.18 54 -18.36 54 0 54 C0 36.18 0 18.36 0 0 Z "/>
          <path d="M0 0 C18.48 0 36.96 0 56 0 C56 17.82 56 35.64 56 54 C73.82 54 91.64 54 110 54 C110 72.15 110 90.3 110 109 C73.7 109 37.4 109 0 109 C0 73.03 0 37.06 0 0 Z "/>
          <path d="M0 0 C8.91 0 17.82 0 27 0 C27 90.09 27 180.18 27 273 C18.09 273 9.18 273 0 273 C0 182.91 0 92.82 0 0 Z " transform="translate(0,0)"/>
          <path d="M0 0 C9.57 0 19.14 0 29 0 C29 17.82 29 35.64 29 54 C46.82 54 64.64 54 83 54 C83 72.15 83 90.3 83 109 C55.61 109 28.22 109 0 109 C0 73.03 0 37.06 0 0 Z "/>
          <path d="M0 0 C1.01154144 -0.00311188 2.02308289 -0.00622375 3.0652771 -0.00942993 C4.7290892 -0.00645401 4.7290892 -0.00645401 6.42651367 -0.00341797 C7.57181549 -0.00473724 8.71711731 -0.00605652 9.89712524 -0.00741577 C13.62960487 -0.0093378 17.3620104 -0.00299456 21.09448242 0.00439453 C22.34907257 0.00528076 23.60366272 0.00616699 24.89627075 0.00708008 C42.72160294 0.02199104 60.47499934 0.28646042 78.28198242 1.12939453 C78.28198242 19.27939453 78.28198242 37.42939453 78.28198242 56.12939453 C50.56198242 56.12939453 22.84198242 56.12939453 -5.71801758 56.12939453 C-5.73864258 47.07501953 -5.75926758 38.02064453 -5.78051758 28.69189453 C-5.79417358 24.39847046 -5.79417358 24.39847046 -5.80810547 20.01831055 C-5.8110244 17.76497444 -5.81357301 15.5116378 -5.81567383 13.25830078 C-5.82078979 12.07586792 -5.82590576 10.89343506 -5.83117676 9.6751709 C-5.83129761 8.55864136 -5.83141846 7.44211182 -5.83154297 6.29174805 C-5.83376358 5.31689957 -5.83598419 4.34205109 -5.83827209 3.33766174 C-5.61659259 -0.73310076 -3.57396693 0.00319344 0 0 Z "/>
          <path d="M0 0 C0.33 0 0.66 0 1 0 C1 35.97 1 71.94 1 109 C19.15 109 37.3 109 56 109 C56 127.15 56 145.3 56 164 C37.52 164 19.04 164 0 164 C0 109.88 0 55.76 0 0 Z "/>
          <path d="M0 0 C9.24 0 18.48 0 28 0 C28 35.97 28 71.94 28 109 C18.76 109 9.52 109 0 109 C0 73.03 0 37.06 0 0 Z " transform="translate(217,164)"/>
          <path d="M0 0 C18.15 0 36.3 0 55 0 C55.020625 8.889375 55.04125 17.77875 55.0625 26.9375 C55.071604 29.74757568 55.08070801 32.55765137 55.09008789 35.45288086 C55.09300683 37.66520134 55.09555544 39.87752235 55.09765625 42.08984375 C55.10277222 43.25068481 55.10788818 44.41152588 55.11315918 45.60754395 C55.11334045 47.25188416 55.11334045 47.25188416 55.11352539 48.92944336 C55.115746 49.88652695 55.11796661 50.84361053 55.12025452 51.82969666 C55 54 55 54 54 55 C52.31198015 55.09353163 50.62004793 55.11744791 48.92944336 55.11352539 C47.83321655 55.11340454 46.73698975 55.11328369 45.60754395 55.11315918 C44.44670288 55.10804321 43.28586182 55.10292725 42.08984375 55.09765625 C41.02930786 55.09664917 39.96877197 55.09564209 38.87609863 55.09460449 C34.89655483 55.08935387 30.91702638 55.07539276 26.9375 55.0625 C18.048125 55.041875 9.15875 55.02125 0 55 C0 36.85 0 18.7 0 0 Z "/>
          <path d="M0 0 C7.33845237 -0.02590394 14.6768925 -0.04309155 22.01538086 -0.05493164 C24.49845825 -0.05988087 26.98153287 -0.0666419 29.46459961 -0.07543945 C47.00774093 -0.13592078 64.47120007 0.2552166 82 1 C82 18.82 82 36.64 82 55 C64.18 55 46.36 55 28 55 C28 37.18 28 19.36 28 1 C18.76 1 9.52 1 0 1 C0 0.67 0 0.34 0 0 Z "/>
          <path d="M0 0 C18.15 0 36.3 0 55 0 C55 17.82 55 35.64 55 54 C36.85 54 18.7 54 0 54 C0 36.18 0 18.36 0 0 Z "/>
          <path d="M0 0 C17.82 0 35.64 0 54 0 C54 18.15 54 36.3 54 55 C36.18 55 18.36 55 0 55 C0 36.85 0 18.7 0 0 Z "/>
          <path d="M0 0 C9.24 0 18.48 0 28 0 C28 18.15 28 36.3 28 55 C18.76 55 9.52 55 0 55 C0 36.85 0 18.7 0 0 Z "/>
          <path d="M0 0 C9.24 0 18.48 0 28 0 C28 18.15 28 36.3 28 55 C18.76 55 9.52 55 0 55 C0 36.85 0 18.7 0 0 Z "/>
          <path d="M0 0 C9.24 0 18.48 0 28 0 C28 17.82 28 35.64 28 54 C18.76 54 9.52 54 0 54 C0 36.18 0 18.36 0 0 Z "/>
        </svg>
      }
      iconType="duotone"
    >
  </Card>
</CardGroup>

---

<CardGroup cols={2}>
<Card title="Quickstart" href="/0.1/quickstart" icon='bolt'>
Get Started with monitoring your LLM Applications in 2 simple steps
</Card>
<Card title="Connections" href="/0.1/connections/intro" icon='link'>
Connect to your existing Observablity Platform
</Card>
</CardGroup>